packages/components/bolt-video/src/video.scss
@import '@bolt/core';
@import 'videojs-enhancements';
@import 'video-meta';

// Same as max-width of wrapper container
$bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);


#{$bolt-namespace}-video {
  display: block;
  width: 100%;
  background-color: bolt-color(black); // placeholder color before poster loads up.

  &[is-background-video]{
    @include bolt-margin-right(auto);
    @include bolt-margin-left(auto);
    flex-grow: 1;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    min-width: 100%;
    max-width: none;
    pointer-events: none;
    background-color: rgba(22, 26, 60, .8);
    opacity: 0;
    transition: opacity .3s ease, min-height .3s ease;

    .is-expanded & {
      pointer-events: auto;
      opacity: 1;
    }

    .video-js {
      @include bolt-margin(0 auto);
      width: 100%;
      min-width: 0;
      height: 100%;
      background-color: transparent;
      transition: all .4s ease;

      &:not(.vjs-fullscreen) {
        max-width: 1400px;
      }
    }
  }
}


/**
  * 1. 90vw instead of 100vw so the video close button
  * doesn't spill outside of the video container in IE 11 /
  * on Windows
  */
.c-#{$bolt-namespace}-video {
  width: 100%;
  max-width: none;
  z-index: bolt-z-index('tooltip');
  transition: transform .4s cubic-bezier(.645, 0, .355, 1);

  .video-js {
    width: 100%;
    height: 100%;
  }

  // Higher specificity required to prevent override from Hapyak's CSS loaded
  .video-js.video-js.video-js {
    position: absolute;
  }

  &.c-#{$bolt-namespace}-video--background {
    display: block;
    position: relative;
    max-width: calc(100% - #{bolt-spacing(large)});
    max-height: 100%;
    margin: 0 auto;
    height: 100%;

    @media (max-width: (bolt-breakpoint(small) - 1px)) {
      max-height: calc(100% - 40px);
    }

    @include respond-to(small){
      max-width: calc(100vw - #{bolt-spacing(large) * 2});
    }

    @media screen and (min-width: 1400px){
      max-width: calc(1400px - #{bolt-spacing(large) * 2});
    }
  }
}



.c-#{$bolt-namespace}-video__close-button {
  color: bolt-color(orange);
  @include bolt-css-vars((
    --#{$bolt-namespace}-theme-icon: bolt-color(orange),
  ));
  position: absolute;
  z-index: bolt-z-index('tooltip');
  top: bolt-spacing(xsmall);
  right: bolt-spacing(xsmall);
  transition: all 0.3s ease;
  opacity: 0; // Initial state before brightcove video player kicks in

  @include respond-to(small) {
    right: (bolt-spacing(large) / -2) - bolt-spacing(xsmall);
  }

  &:hover {
    opacity: 1;
  }

  &:active {
    opacity: 0.6;
  }

  .is-collapsed & {
    opacity: 0;
    pointer-events: none;
  }

  .is-expanded & {
    opacity: 0.8;
    pointer-events: auto;
  }
}

.c-#{$bolt-namespace}-video__close-button--icon-to-text {
  @media (max-width: (bolt-breakpoint(small) - 1px)) {
    display: block;
    position: relative;
    right: 0;
    text-align: right;
    .c-#{$bolt-namespace}-video__close-button-icon {
      display: none;
    }
  }
  @media (min-width: bolt-breakpoint(small)) {
    position: absolute;
    .c-#{$bolt-namespace}-video__close-button-text {
      @include bolt-visuallyhidden;
    }
  }
}

.c-#{$bolt-namespace}-video__close-button:not(.c-#{$bolt-namespace}-video__close-button--icon-to-text) {
  .c-#{$bolt-namespace}-video__close-button-text {
    @include bolt-visuallyhidden;
  }
}

.c-#{$bolt-namespace}-video__close-button-icon,
.c-#{$bolt-namespace}-video__close-button-text {
  cursor: pointer;
}

.c-#{$bolt-namespace}-video__close-button-text {
  color: bolt-color(white);
  text-decoration: underline;
}


.c-#{$bolt-namespace}-video--hide-controls {
  .video-js .vjs-control-bar {
    display: none;
  }
  .video-js {
    pointer-events: none;
  }
}

